Made it look reasonable on mobile and fixed change board size on mobile

--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+[v-cloak] {
+  display: none;
+}
+
 body {
   font-size: 15px;
 }
@@ -11,9 +15,16 @@ body {
   border: 2px solid black;
   background-color: silver;
   width: 0px;
-  left: -1px;
+  /* left: -1px; */
   position: relative;
   top: 1px;
+  width: 100%;
+}
+
+@media screen and (max-width: 488px) {
+  #page_title {
+    font-size: 1.5em;
+  }
 }
 
 #smile,
@@ -35,8 +46,11 @@ body {
   border: 1px solid black;
   background-color: silver;
   box-shadow: 0 0 1px 1px #666;
-  color: black;
   text-align: center;
+}
+
+td {
+  margin: 2px;
 }
 
 #mines_left {
@@ -73,6 +87,11 @@ body {
   width: 22px;
   height: 22px;
   position: absolute;
+}
+
+.error {
+  font-size: 12px;
+  color: red;
 }
 
 .minesweeper_number {
